# restaurant

./: .gitignore  AGENTS.md  README.md  alembic.ini  models-breakdown.md  pyproject.toml  test_api.rest
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 03969ebb4a0f_add_events_table.py  9f1354a23520_add_items_table.py  f239e308df36_add_users_table.py
scripts/: manage_worktree.py  recreate_db.sh
src/: main.py
src/restaurant/: database.py  main.py  models.py
src/restaurant/domain/: models.py
src/restaurant/models/: __init__.py  associations.py  event.py  item.py  user.py
src/restaurant/repositories/: __init__.py  base.py  events.py  items.py  users.py
src/restaurant/routers/: events.py  items.py  users.py
src/routers/: events.py  items.py  users.py
